--- a/index.html
+++ b/index.html
@@ -1884,8 +1884,8 @@
                 </li>
               </ul>
             </div>
-            <label class="editions__price-label" for="price-block">Цена</label>
-            <div class="editions__price-block" id="price-block">
+            <h3 class="editions__price-label">Цена</h3>
+            <div class="editions__price-block">
               <label class="price__block-label" for="price-from">От</label>
               <input class="price__block-input" id="price-from" name="value" placeholder="50" type="text"
                 data-mask="number">
@@ -1997,123 +1997,6 @@
               </div>
             </div>
           </div>
-          <!-- <div class="editions__mobile-block">
-            <ul class="editions__mobile-list">
-              <li class="editions__mobile-item">
-                <picture class="editions__mobile-pict">
-                  <source srcset="img/editions-1-320.png" media="(max-width: 576px)">
-                  <img class="editions__mobile-img" src="img/editions-1-320.png" alt="">
-                </picture>
-                <h3 class="editions__mobile-heading">
-                  Искусство цвета
-                </h3>
-                <span class="editions__mobile-author">
-                  Иттен, Иоханнес
-                </span>
-                <span class="editions__mobile-price">
-                  620 руб
-                </span>
-                <button class="editions__mobile-btn">Заказать</button>
-              </li>
-              <li class="editions__mobile-item">
-                <picture class="editions__mobile-pict">
-                  <source srcset="img/editions-2-320.png" media="(max-width: 576px)">
-                  <img class="editions__mobile-img" src="img/editions-2-320.png" alt="">
-                </picture>
-                <h3 class="editions__mobile-heading">
-                  Типографика
-                </h3>
-                <span class="editions__mobile-author">
-                  Рудер, Эмиль
-                </span>
-                <span class="editions__mobile-price">
-                  2 450 руб
-                </span>
-                <button class="editions__mobile-btn">Заказать</button>
-              </li>
-              <li class="editions__mobile-item">
-                <picture class="editions__mobile-pict">
-                  <source srcset="img/editions-3-320.png" media="(max-width: 576px)">
-                  <img class="editions__mobile-img" src="img/editions-3-320.png" alt="">
-                </picture>
-                <h3 class="editions__mobile-heading">
-                  Книга про буквы
-                </h3>
-                <span class="editions__mobile-author">
-                  Гордон, Юрий
-                </span>
-                <span class="editions__mobile-price">
-                  2 200 руб
-                </span>
-                <button class="editions__mobile-btn">Заказать</button>
-              </li>
-              <li class="editions__mobile-item">
-                <picture class="editions__mobile-pict">
-                  <source srcset="img/editions-4-320.png" media="(max-width: 576px)">
-                  <img class="editions__mobile-img" src="img/editions-4-320.png" alt="">
-                </picture>
-                <h3 class="editions__mobile-heading">
-                  Николай Ильин
-                </h3>
-                <span class="editions__mobile-author">
-                  Кричевский, Влади...
-                </span>
-                <span class="editions__mobile-price">
-                  1 100 руб
-                </span>
-                <button class="editions__mobile-btn">Заказать</button>
-              </li>
-              <li class="editions__mobile-item">
-                <picture class="editions__mobile-pict">
-                  <source srcset="img/editions-5-320.png" media="(max-width: 576px)">
-                  <img class="editions__mobile-img" src="img/editions-5-320.png" alt="">
-                </picture>
-                <h3 class="editions__mobile-heading">
-                  Модульные сетки...
-                </h3>
-                <span class="editions__mobile-author">
-                  Мюллер-Брокманн...
-                </span>
-                <span class="editions__mobile-price">
-                  1 450 руб
-                </span>
-                <button class="editions__mobile-btn">Заказать</button>
-              </li>
-              <li class="editions__mobile-item">
-                <picture class="editions__mobile-pict">
-                  <source srcset="img/editions-6-320.png" media="(max-width: 576px)">
-                  <img class="editions__mobile-img" src="img/editions-6-320.png" alt="">
-                </picture>
-                <h3 class="editions__mobile-heading">
-                  Эволюция графич...
-                </h3>
-                <span class="editions__mobile-author">
-                  Хеллер, Чваст
-                </span>
-                <span class="editions__mobile-price">
-                  3 200 руб
-                </span>
-                <button class="editions__mobile-btn">Заказать</button>
-              </li>
-              <li class="editions__mobile-item">
-                <picture class="editions__mobile-pict">
-                  <source srcset="img/editions-7-320.png" media="(max-width: 576px)">
-                  <img class="editions__mobile-img" src="img/editions-7-320.png" alt="">
-                </picture>
-                <h3 class="editions__mobile-heading">
-                  Искусство и визуа...
-                </h3>
-                <span class="editions__mobile-author">
-                  Арнхейм, Рудольф
-                </span>
-                <span class="editions__mobile-price">
-                  2 200 руб
-                </span>
-                <button class="editions__mobile-btn">Заказать</button>
-              </li>
-            </ul>
-          </div> -->
-
         </div>
       </div>
     </section>
@@ -2292,7 +2175,7 @@
             </address>
             <div class="contacts__map" id="map"></div>
             <form class="contacts__form" id="form" action="https://jsonplaceholder.typicode.com/posts" method="post">
-              <label class="contacts__form-label" for="form">Заказать обратный звонок</label>
+              <h3 class="contacts__form-label">Заказать обратный звонок</h3>
               <div class="contacts__form-item">
                 <input class="contacts__form-block" type="text" id="name" name="name" placeholder="Имя*" data-validate-field="name">
               </div>
@@ -2301,8 +2184,8 @@
               </div>
               <button class="contacts__form-button" type="submit" aria-label="Заказать обратный звонок">Заказать</button>
             </form>
-            <label class="contacts__adress-label" for="messager">Связаться в один клик</label>
-            <ul class="contacts__adress-list" id="messager">
+            <h3 class="contacts__adress-label">Связаться в один клик</h3>
+            <ul class="contacts__adress-list">
               <li class="contacts__adress-messager">
                 <a class="contacts__adress-link" aria-label="открыть чат в вацап" href="whatsapp://send?phone=+7903xxxxxxx">
                   <svg class="contacts__messager-icon" width="40" height="40" viewbox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -2451,7 +2334,7 @@
   <script src="js/simplebar.min.js"></script>
   <script src="js/inputmask.min.js"></script>
   <script src="js/just-validate.min.js"></script>
-  <script src="https://api-maps.yandex.ru/2.1/?apikey=вашAPI-ключ&lang=ru_RU" type="text/javascript"></script>
+  <script src="https://api-maps.yandex.ru/2.1/?apikey=вашAPI-ключ&lang=ru_RU"></script>
   <script src="js/swiper-bundle.min.js"></script>
   <script src="js/jquery.js"></script>
   <script src="js/imask.js"></script>
